# transcriber

./: CMakeLists.txt  package.xml
include/transcriber/: qformer_image_encoder.hpp  qformer_text_encoder.hpp  tensor_cache.hpp
src/: qformer_image_encoder.cpp  qformer_text_encoder.cpp
test/: test_qformer_encoder.cpp  test_qformer_text_encoder.cpp
